--- a/barhome.html
+++ b/barhome.html
@@ -192,31 +192,31 @@
                     <div class="div-li-menu">
                         <p class="name-drinks">Chapel Hill Shiraz </p>
                         <div class="line"></div>
-                        <p class="price">$56</p>
+                        <p class="price">&#x24 56</p>
                     </div>
                     <p class="firm">AU | Bottle</p>
                     <div class="div-li-menu">
                         <p class="name-drinks">Catena Malbee</p>
                         <div class="line"></div>
-                        <p class="price">$59</p>
+                        <p class="price">&#x24 59</p>
                     </div>
                     <p class="firm">AR | Bottle</p>
                     <div class="div-li-menu">
                         <p class="name-drinks">La Vielle Rosé</p>
                         <div class="line"></div>
-                        <p class="price">$44</p>
+                        <p class="price">&#x24 44</p>
                     </div>
                     <p class="firm">FR | 750ml</p>
                     <div class="div-li-menu">
                         <p class="name-drinks">Rhino Pale Ale</p>
                         <div class="line"></div>
-                        <p class="price">$31</p>
+                        <p class="price">&#x24 31</p>
                     </div>
                     <p class="firm">CA | 750ml</p>
                     <div class="div-li-menu">
                         <p class="name-drinks">Irish Guinnes</p>
                         <div class="line"></div>
-                        <p class="price">$26</p>
+                        <p class="price">&#x24 26</p>
                     </div>
                     <p class="firm">IE | 750ml</p>
                 </li>
@@ -230,31 +230,31 @@
                     <div class="div-li-menu">
                         <p class="name-drinks">Aperol Spritz</p>
                         <div class="line"></div>
-                        <p class="price">$20</p>
+                        <p class="price">&#x24 20</p>
                     </div>
                     <p class="firm">Aperol | Villa Marchesi prosecco | soda | 30ml</p>
                     <div class="div-li-menu">
                         <p class="name-drinks">Dark 'N' Stormy</p>
                         <div class="line"></div>
-                        <p class="price">$16</p>
+                        <p class="price">&#x24 16</p>
                     </div>
                     <p class="firm">Dark rum | Ginger beer | Slice of lime.</p>
                     <div class="div-li-menu">
                         <p class="name-drinks">Daiquiru</p>
                         <div class="line"></div>
-                        <p class="price">$10</p>
+                        <p class="price">&#x24 10</p>
                     </div>
                     <p class="firm">Rum | Citrus juice | Sugar</p>
                     <div class="div-li-menu">
                         <p class="name-drinks">Old Fashioned</p>
                         <div class="line"></div>
-                        <p class="price">$31</p>
+                        <p class="price">&#x24 31</p>
                     </div>
                     <p class="firm">Bourbon | Brown sugar | Angostura Bitters</p>
                     <div class="div-li-menu">
                         <p class="name-drinks">Negroni</p>
                         <div class="line"></div>
-                        <p class="price">$26</p>
+                        <p class="price">&#x24 26</p>
                     </div>
                     <p class="firm">Gin | Sweet Vermouth | Campari | Orange garnish</p>
                 </li>
